# WeekendSlicer

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  taplo.toml
assets/: blend_spheres.stl  libfive_tetrahedron.py
crates/mesh2frep/: Cargo.toml  README.md
crates/mesh2frep/src/: error.rs  lib.rs  main.rs  mesh2frep.rs
crates/mesh2frep/src/rhai/: sdf_mesh.rhai  triangle.rhai  ugf_mesh.rhai  unit_tetrahedron.rhai
crates/weekendslicer/: Cargo.toml
crates/weekendslicer/src/: main.rs
crates/workspace-hack/: Cargo.toml
examples/: cube.rhai  sphere.rhai
scripts/: blend_sphere.py  scratchpad.py
src/: main.rs
