[package]
name = "weekend-slicer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Wulfsta <wulfstawulfsta@gmail.com>"]
description = "Slicer for implicit surfaces."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.23", features = ["derive", "cargo", "unicode"]}
fidget = {version = "0.3.3"}
nalgebra = {version = "0.33.2"}
indexmap = {version = "2.7.0", features = ["std"]}
