[workspace]
resolver = "2"
# Note that we define member crates with a wildcard here and NOT with explicit
# paths because the flake.nix is written in a way such that top-level members
# (`my-cli` and `my-server`) are built as different derivations which avoid being
# rebuilt if the other package's sources change.
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["Wulfsta <wulfstawulfsta@gmail.com>"]
description = "Slicer for implicit surfaces."
readme = "README.md"

[workspace.metadata.crane]
name = "weekendslicer-workspace"

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive", "cargo", "unicode"] }
fidget = { version = "0.4.3" }
indexmap = { version = "2.13.0", features = ["std"] }
nalgebra = { version = "0.34.1" }
rayon = { version = "1.11.0" }
stl_io = { version = "0.11.0" }
strum = { version = "0.28.0", features = ["derive"] }
tritet = { version = "3.1.0", features = ["with_tetgen"] }
