[package]
name = "mesh2frep"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
authors.workspace = true
description = "Library and cli tool to tetrahedralize a manifold surface mesh and convert it to a Fidget parsable F-Rep."
readme.workspace = true

[dependencies]
clap.workspace = true
nalgebra.workspace = true
rayon.workspace = true
stl_io.workspace = true
strum.workspace = true
tritet.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lib]
