[package]
name = "weekendslicer"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
clap.workspace = true
fidget.workspace = true
indexmap.workspace = true
nalgebra.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
